// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component renders divider 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-divider mia-platform-divider-horizontal mia-platform-divider-no-default-orientation-margin-left"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider Component renders divider with text correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-divider mia-platform-divider-horizontal mia-platform-divider-with-text mia-platform-divider-with-text-left mia-platform-divider-no-default-orientation-margin-left"
    role="separator"
  >
    <span
      class="mia-platform-divider-inner-text"
      style="margin-left: 24px;"
    >
      Some text
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider Component renders vertical divider correctly 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-divider mia-platform-divider-vertical mia-platform-divider-no-default-orientation-margin-left"
    role="separator"
  />
</DocumentFragment>
`;
